force-app/main/default/objects/SS_Answer__c/SS_Answer__c.object-meta.xml
<CustomObject>
    <label>Response</label>
    <nameField>
        <displayFormat>AN-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>