force-app/main/default/objects/SS_Answer__c/fields/SS_Answer__c.field-meta.xml
<CustomField>
    <fullName>SS_Answer__c</fullName>
    <label>Answer</label>
    <type>TextArea</type>
</CustomField>