force-app/main/default/objects/SS_Answer__c/fields/SS_Parent_Question__c.field-meta.xml
<CustomField>
    <fullName>SS_Parent_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>SS_Question__c</referenceTo>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>