force-app/main/default/objects/SS_Answer__c/fields/SS_Question__c.field-meta.xml
<CustomField>
    <fullName>SS_Question__c</fullName>
    <label>Question Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>