force-app/main/default/objects/SS_Answer__c/fields/SS_Question_Id__c.field-meta.xml
<CustomField>
    <fullName>SS_Question_Id__c</fullName>
    <externalId>true</externalId>
    <label>Question Id</label>
    <length>221</length>
    <type>Text</type>
</CustomField>