force-app/main/default/objects/SS_Answer__c/fields/SS_Question_Type__c.field-meta.xml
<CustomField>
    <fullName>SS_Question_Type__c</fullName>
    <formula>SS_Parent_Question__r.SS_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Type</label>
    <type>Text</type>
</CustomField>