force-app/main/default/objects/SS_Answer__c/fields/SS_Share_Type__c.field-meta.xml
<CustomField>
    <fullName>SS_Share_Type__c</fullName>
    <formula>TEXT(SS_Submission_Id__r.Response_Type__c)</formula>
    <label>Share Type</label>
    <type>Text</type>
</CustomField>