force-app/main/default/objects/SS_Answer__c/fields/SS_Submission_Id__c.field-meta.xml
<CustomField>
    <fullName>SS_Submission_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submission Id</label>
    <referenceTo>SS_Survey_Response_Feedback__c</referenceTo>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>