force-app/main/default/objects/SS_Answer__c/fields/SS_Survey_Name__c.field-meta.xml
<CustomField>
    <fullName>SS_Survey_Name__c</fullName>
    <formula>SS_Submission_Id__r.SS_Survey__r.Name</formula>
    <label>Survey Name</label>
    <type>Text</type>
</CustomField>