force-app/main/default/objects/SS_Answer__c/fields/SS_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>SS_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <type>Lookup</type>
</CustomField>