force-app/main/default/objects/SS_Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SS_Question__c</columns>
    <columns>SS_Answer__c</columns>
    <columns>SS_Submission_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SS_Question_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>